# translate-tool

./: Cargo.toml  Dockerfile  README.md  motd  tt.config.json
.github/workflows/: cicd.yml
examples/: bitbucket-pipeline.yml  github-workflow.yml  gitlab-pipeline.yml
src/: cli.rs  config.rs  files.rs  main.rs  parser.rs
src/commands/: add.rs  mod.rs  update.rs  validate.rs
test/: tt.config.json
test/translations/: en.json  nl.json
