[package]
name = "translate-tool"
version = "0.1.2"
edition = "2024"
authors = ["borisnliscool"]
repository = "https://github.com/borisnliscool/translate-tool"

[dependencies]
clap = { version = "4.5.43", features = ["derive"] }
camino = "1.1.10"
inquire = "0.7.5"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }